<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/GoogleCalendarConnection"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FAFAFA"
    tools:context=".controller.signup.GoogleCalendarConnection">


...
        android:src="@drawable/google_calendar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/head" />

    <TextView
        android:id="@+id/status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/montserrat"
        android:padding="10dp"
        android:text="@string/status_not_connected"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/check"
        app:layout_constraintStart_toStartOf="@+id/fLogo"
        app:layout_constraintTop_toBottomOf="@+id/fLogo" />
...
        app:layout_constraintStart_toEndOf="@+id/status"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="@+id/status"
        app:layout_constraintVertical_bias="0.466" />

    <Button
        android:id="@+id/connectCalendar"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/main_button"
        android:fontFamily="@font/montserrat"
        android:gravity="center"
...
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">


        <Button
            android:id="@+id/backBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:text="@string/back"
            android:textColor="@color/colorAccent" />
...
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:gravity="center"
            android:text="4 / 4" />

        <Button
            android:id="@+id/finishBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:text="@string/finish"
            android:textColor="@color/colorAccent" />
...
