...
    <string name="questionnaire">Please complete the questionnaire </string>
    <string name="incomeFormat">Please enter correct income format </string>
    <string name="selectPic">Select Picture </string>
    <string name="image">"Image chosen "</string>
    <string name="passwordUpdate">Password updated </string>
    <string name="passwordNotUpdated">Password is not updated, please try again </string>
    <string name="wrongPassword">you have entered a wrong password </string>
    <string name="passwordSame">You cannot use the same password </string>
    <string name="emailpassWrong">The email or password is wrong</string>
    <string name="auth">Authentication failed</string>
    <string name="emailVerify">Check email link to verify account</string>


...
        Please Enter Your Email
    </string>
    <string name="ForgetPassOK">Request New Password</string>
    <string name="ForgetPassCancle">Cancel</string>
    <string name="EmptyEmail">Email Should not be Empty</string>
    <string name="NotCorrectEmail">Please, Enter Your Email Correctly.</string>
    <string name="NoUser">* There is not User With this Email, Please Try Again!</string>
    <string name="SocioNotFound">You Have First Complete The Registration Requirements Before Log in</string>

    <!-- Suign up Page -->
    <string name="NotValidName">* Enter valid name.</string>
    <string name="NotValidEmail">* Enter valid email.</string>
    <string name="NotMatchPass">* Password does not match.</string>
...
